Add Student overview

--- a/student/home/index.html
+++ b/student/home/index.html
@@ -80,34 +80,34 @@
 
                     <div class="pb-3">
                         <h3>Community</h3>
-                        <div class="ps-1 align-content-between" style="filter: grayscale(100%); color: var(--sys-gray)">
-                            <div class="d-flex pb-1 cursor-pointer">
+                        <div class="ps-1 align-content-between">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="radio-outline"></ion-icon></div>
                                 <div class="col text-start">Rundnachrichten</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-end"><ion-icon style="padding-right: 6px; font-size: 10px" name="ellipse"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="chatbox-outline"></ion-icon></ion-icon></div>
                                 <div class="col text-start">Kommentare</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="trending-up-outline"></ion-icon></div>
                                 <div class="col text-start">Rankings</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="pie-chart-outline"></ion-icon></div>
                                 <div class="col text-start">Umfragen</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="file-tray-full-outline"></ion-icon></ion-icon></div>
-                                <div class="col text-start"><a role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="/*loadModule('quotation')*/">Zitate</a></div>
+                                <div class="col text-start">Zitate</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
@@ -140,22 +140,24 @@
                     </div>
                     <div class="pb-3">
                         <h3>Verwaltung</h3>
-                        <div class="ps-1 align-content-between" style="filter: grayscale(100%); color: var(--sys-gray)">
-                            <div class="d-flex pb-1 cursor-pointer">
+                        <div class="ps-1 align-content-between">
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
                                 <div class="pe-1 text-start"><ion-icon name="cash-outline"></ion-icon></div>
                                 <div class="col text-start">Finanzen</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
-                                <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
-                                <div class="pe-1 text-start"><ion-icon name="person-circle-outline"></ion-icon></div>
-                                <div class="col text-start">Schüler</div>
-                                <div class="col text-end text-secondary container-none">Detail</div>
-                                <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('students')">
+                                    <div class="pe-1 text-start"><ion-icon name="person-circle-outline"></ion-icon></div>
+                                    <div class="col text-start">Schüler</div>
+                                    <div class="col text-end text-secondary container-none">Detail</div>
+                                    <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                </div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer">
-                                <div class="pe-1 text-start"><ion-icon name="add-circle-outline"></ion-icon></div>
-                                <div class="col text-start">Lehrer</div>
+                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
+                                <div class="pe-1 text-start"><ion-icon name="pulse-outline"></ion-icon></div>
+                                <div class="col text-start">AuditLog</div>
                                 <div class="col text-end text-secondary container-none">Detail</div>
                                 <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
                             </div>
