no duplicate initialization in module

--- a/student/home/modules/quotation.html
+++ b/student/home/modules/quotation.html
@@ -135,7 +135,7 @@
 </div>
 
 <script id="moduleScript">
-    let likeFilter = false;
+    var likeFilter = false;
 
     getQuotation()
         .then(value => {
