--- a/student/home/index.html
+++ b/student/home/index.html
@@ -44,7 +44,7 @@
     <div id="homeView" class="h-100">
 
         <!-- Open Menu Button -->
-        <a id="sideBarToggle" class="sideBarToggle display-none pt-2" onclick="themeChange()"
+        <a id="sideBarToggle" class="sideBarToggle display-none pt-2" onclick="themeChange()" style="color: var(--sys-blue)"
            role="button" data-bs-toggle="offcanvas" href="#sideBarView" aria-controls="offcanvasExample">
             <ion-icon name="chevron-back-outline">Zurück</ion-icon>
         </a>
