blue back button

--- a/student/home/index.html
+++ b/student/home/index.html
@@ -44,9 +44,9 @@
     <div id="homeView" class="h-100">
 
         <!-- Open Menu Button -->
-        <a id="sideBarToggle" class="sideBarToggle display-none pt-2" onclick="themeChange()" style="color: var(--sys-blue)"
+        <a id="sideBarToggle" class="sideBarToggle display-none pt-2" onclick="themeChange()"
            role="button" data-bs-toggle="offcanvas" href="#sideBarView" aria-controls="offcanvasExample">
-            <ion-icon name="chevron-back-outline">Zurück</ion-icon>
+            <ion-icon style="color: var(--sys-blue)" name="chevron-back-outline">Zurück</ion-icon>
         </a>
 
         <!-- Site Content -->
