code cleanup and simple features

--- a/student/home/index.html
+++ b/student/home/index.html
@@ -209,6 +209,7 @@
     </div>
 </div>
 
+<script src="/js/utils/textUtils.js" rel="script" type="text/javascript"></script>
 <script src="/js/utils/skipThroughInput.js" rel="script" type="text/javascript"></script>
 <script src="/js/student/cookieHandler.js" rel="script" type="text/javascript"></script>
 <script src="/js/student/studentApi.js" rel="script" type="text/javascript"></script>
