--- a/student/home/modules/development.html
+++ b/student/home/modules/development.html
@@ -68,7 +68,7 @@
                 </div>
             </div>
         </div>
-        <h2 id="name" class="px-3 px-md-5" style="font-weight: bold; color: var(--sys-green)">Entwicklung</h2>
+        <h2 id="name" class="pt-2 px-3 px-md-5" style="font-weight: bold; color: var(--sys-green)">Entwicklung</h2>
     </div>
 
     <!-- Content -->
