--- a/student/home/modules/account.html
+++ b/student/home/modules/account.html
@@ -65,7 +65,7 @@
                 </div>
             </div>
         </div>
-        <h2 id="name" class="px-3 px-md-5" style="font-weight: bold; color: var(--sys-indigo)">lädt...</h2>
+        <h2 id="name" class="pt-2 px-3 px-md-5" style="font-weight: bold; color: var(--sys-indigo)">lädt...</h2>
     </div>
 
     <!-- Content -->
