--- a/student/home/index.html
+++ b/student/home/index.html
@@ -30,6 +30,10 @@
     <link href="/vendor/loadAnimation/loadAnimation.css" rel="stylesheet" type="text/css">
     <script src="/vendor/loadAnimation/loadAnimation.js"></script>
 
+    <link href="/css/studentGraphConfigure.css" rel="stylesheet" type="text/css">
+    <link href="/vendor/chartist/chartist.css" rel="stylesheet" type="text/css">
+    <script src="/vendor/chartist/chartist.js"></script>
+
     <!--CSS-->
     <link href="/css/studentHome.css" rel="stylesheet" type="text/css">
 
@@ -143,11 +147,13 @@
                     <div class="pb-3">
                         <h3>Verwaltung</h3>
                         <div class="ps-1 align-content-between">
-                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
-                                <div class="pe-1 text-start"><ion-icon name="cash-outline"></ion-icon></div>
-                                <div class="col text-start">Finanzen</div>
-                                <div class="col text-end text-secondary container-none">Detail</div>
-                                <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('finance')">
+                                    <div class="pe-1 text-start"><ion-icon name="cash-outline"></ion-icon></div>
+                                    <div class="col text-start">Finanzen</div>
+                                    <div class="col text-end text-secondary container-none">Detail</div>
+                                    <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                </div>
                             </div>
                             <div class="pb-1">
                                 <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('students')">
@@ -157,11 +163,13 @@
                                     <div class="ps-1 text-start"><ion-icon name="information-circle-outline"></ion-icon></div>
                                 </div>
                             </div>
-                            <div class="d-flex pb-1 cursor-pointer" style="filter: grayscale(100%); color: var(--sys-gray)">
-                                <div class="pe-1 text-start"><ion-icon name="pulse-outline"></ion-icon></div>
-                                <div class="col text-start">AuditLog</div>
-                                <div class="col text-end text-secondary container-none">Detail</div>
-                                <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                            <div class="pb-1">
+                                <div class="d-flex cursor-pointer" role="button" data-bs-dismiss="offcanvas" aria-label="Close" onclick="loadModule('auditlog')">
+                                    <div class="pe-1 text-start"><ion-icon name="pulse-outline"></ion-icon></div>
+                                    <div class="col text-start">AuditLog</div>
+                                    <div class="col text-end text-secondary container-none">Detail</div>
+                                    <div class="ps-1 text-start container-none"><ion-icon name="information-circle-outline"></ion-icon></div>
+                                </div>
                             </div>
                         </div>
                     </div>
