--- a/student/home/modules/auditlog.html
+++ b/student/home/modules/auditlog.html
@@ -68,7 +68,7 @@
         <div id="auditLogContent">
             <p class="text-secondary m-0">Akutell befinden sich <span id="auditLogCount" style="color: var(--sys-gray)">lädt...</span> im AuditLog.</p>
 
-            <div class="px-1 pt-4 opacityFadeIn">
+            <div class="px-1 pt-4 opacity-fadeIn">
                 <div class="px-0 px-md-2">
                     <div class="row row-cols-2">
                         <div class="col-12 col-md-3 auditLogHeader">
