--- a/student/home/modules/students.html
+++ b/student/home/modules/students.html
@@ -76,7 +76,7 @@
         <h2 id="title" class="pt-2 px-3 px-md-5" style="font-weight: bold; color: var(--sys-blue)">lädt...</h2>
     </div>
     <div class="px-3 px-md-5" style="height: 90%; overflow-y: auto;">
-        <div id="students" class="opacityFadeIn pt-3"></div>
+        <div id="students" class="opacity-fadeIn pt-3"></div>
 
         <div id="notFound" class="display-none" style="height: 90%; display: flex; align-items: center; justify-content: center">
             <div>
