--- a/student/login/index.html
+++ b/student/login/index.html
@@ -57,7 +57,7 @@
 
                     <div>
                         <p id="name-error" class="input-valid">Bitte gebe deinen Vornamen an</p>
-                        <div class="input-group" data-index="1">
+                        <div class="input-group skipThrough" data-index="1">
                             <input id="name" style="border-radius: 15px" type="text" class="form-control input-item"
                                    placeholder="Vorname.Name" aria-label="name" aria-describedby="basic-addon1"
                                    data-index="1">
@@ -65,7 +65,7 @@
 
                         <div class="mt-3">
                             <p id="password-error" class="input-valid">Bitte gebe dein Passwort ein</p>
-                            <div class="input-group">
+                            <div class="input-group skipThrough">
                                 <input id="password" type="password" class="input-item form-control"
                                        placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1"
                                        data-index="2">
