--- a/student/home/modules/finance.html
+++ b/student/home/modules/finance.html
@@ -41,6 +41,14 @@
         font-size: 40pt
     }
 
+    .input-tag {
+        color: #fff;
+        padding: 2px 0 2px 11px;
+        min-width: 40px;
+        width: auto;
+        font-size: 11pt;
+    }
+
     @media only screen and (max-width: 575px) {
         .transaction-container {
             padding-top: 270px;
@@ -58,12 +66,17 @@
             <div class="d-flex px-2">
                 <div class="pe-2">
                     <div class="icon-button" onclick="toggleAddUI()">
-                        <ion-icon style="color: var(--bg-content)" name="add-outline"></ion-icon>
+                        <ion-icon style="color: var(--bg-content);" name="flash-outline"></ion-icon>
                     </div>
                 </div>
-                <div class="pe-2">
+                <div id="transactionButton" class="pe-2">
                     <div class="icon-button" onclick="toggleAddUI()">
-                        <ion-icon style="color: var(--bg-content)" name="flag-outline"></ion-icon>
+                        <ion-icon name="add-outline"></ion-icon>
+                    </div>
+                </div>
+                <div id="goalButton" class="pe-2">
+                    <div class="icon-button" onclick="toggleGoalUI()">
+                        <ion-icon name="flag-outline"></ion-icon>
                     </div>
                 </div>
             </div>
@@ -76,30 +89,81 @@
 
         <div class="w-100 h-100">
             <div class="w-100 row">
+                <div id="transactionCreate" class="col-12 pb-5 top-left-flyIn display-none">
+                    <div class="p-3" style="
+
+                    background: linear-gradient(var(--sys-gray6), var(--sys-gray6)) padding-box,
+                    linear-gradient(140deg, rgba(99,230,226,1) 0%, rgba(93,188,251,1) 21%, rgba(43,227,131,1) 58%, rgba(246,200,51,1) 100%) border-box;
+                    border-radius: 10px;
+                    border: 4px solid transparent;">
+
+                        <h4>Neue Transaktion</h4>
+                        <div class="w-100 row d-flex justify-content-between px-1">
+                            <div class="col-4 col-xl-2 skipThrough" data-index="1">
+                                <input id="transactionCreateValue" class="createInput skipThroughd" style="font-size: 13pt;"
+                                       placeholder="Betrag" type="text" data-index="1" oninput="validForm()">
+                            </div>
+                            <div class="col-8 col-xl-7 px-2 skipThrough">
+                                <input id="transactionCreateTitle" class="createInput" style="font-size: 13pt;"
+                                       placeholder="Titel" type="text" data-index="2" oninput="validForm()">
+                                <input id="transactionCreateDescription" class="createInput pb-2" style="font-size: 13pt;"
+                                       placeholder="Beschreibung" type="text" data-index="3" oninput="validForm()">
+                                <input id="transactionCreateTag" class="createInput input-tag" style="background-color: var(--sys-gray3);"
+                                       placeholder="group" type="text" data-index="3" oninput="onCreateTagInput(); validForm()">
+                            </div>
+                            <div class="col-12 col-xl-3 skipThrough">
+                                <input id="transactionCreateHappened" class="createInput" style="white-space: nowrap; font-size: 13pt;"
+                                       value="" type="datetime-local" data-index="4" oninput="validForm()">
+                            </div>
+                            <div class="col-6 pt-3 skipThrough">
+                                <a class="actionText" onclick="toggleAddUI()">Cancel</a>
+                            </div>
+                            <div class="col-6 pt-3 d-flex align-items-end justify-content-end skipThrough">
+                                <a class="actionText pb-1" onclick="createTransaction()" style="font-weight: 500" data-index="4">Fertig</a>
+                                <div class="icon-button">
+                                    <ion-icon id="iconValidate" class="icon-validate" name="close-circle-outline" style="color: var(--sys-red)"></ion-icon>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div id="goalSet" class="col-12 pb-5 opacity-fadeIn display-none">
+                    <div class="p-3" style="background: var(--sys-gray6);border-radius: 10px;">
+                        <h4>Neues Ziel setzen</h4>
+                        <div class="w-100 row d-flex justify-content-between px-1">
+                            <div class="col-12">
+                                <input id="goalValue" class="createInput skipThroughd" style="font-size: 13pt;"
+                                       placeholder="Ziel" type="text">
+                            </div>
+                            <div class="col-6 pt-3">
+                                <a class="actionText" onclick="toggleGoalUI()">Cancel</a>
+                            </div>
+                            <div class="col-6 pt-3 d-flex align-items-end justify-content-end">
+                                <a class="actionText pb-1" onclick="setGoal()" style="font-weight: 500">Ändern</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col-12 col-xl-5 p-sm-0 pe-md-3">
                     <div class="row h-100">
                         <div class="col-12 col-xl-6">
                             <div class="d-flex align-content-center justify-content-end">
-                                <div class="opacityFadeIn">
+                                <div class="opacity-fadeIn">
                                     <h2 class="m-0" style="white-space: nowrap; font-size: 30pt; font-weight: 600;"><span id="totalMoney">0 €</span></h2>
                                     <p class="text-end text-secondary">Kasse Insgesamt</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 col-xl-6 opacityFadeIn">
+                        <div class="col-12 col-xl-6 opacity-fadeIn">
                             <div class="ps-0 ps-xl-3">
-                                <div class="p-3 h-100" style="border-radius: 10px; background-color: var(--sys-gray6);">
+                                <div id="trendContainer" class="p-3 h-100" style="border-radius: 10px; background-color: var(--sys-gray6);">
                                     <h5>Trend</h5>
                                     <div class="d-flex align-items-center justify-content-center">
-                                        <ion-icon style="color: var(--sys-green); --ionicon-stroke-width: 40px; font-size: 40pt" name="trending-up-outline"></ion-icon>
-                                        <div class="ps-3" style="color: var(--sys-gray); max-height: 45px; overflow-y: hidden">
-                                            <span style="color: var(--sys-green)">+14.0%</span> in 2 Aktionen
-                                        </div>
-                                    </div>
-                                    <div class="display-none d-flex align-items-center justify-content-center">
-                                        <ion-icon style="color: var(--sys-gray3);" class="large-icon" name="trending-up-outline"></ion-icon>
-                                        <div class="ps-3" style="color: var(--sys-gray)">
-                                            Kein Trend erkannt
+                                        <ion-icon id="trendIcon" class="large-icon" style="color: var(--sys-gray3);" name="infinite-outline"></ion-icon>
+                                        <div id="trend" class="ps-3" style="color: var(--sys-gray); max-height: 45px; overflow-y: hidden">
+                                            kein Trend erkannt
                                         </div>
                                     </div>
                                 </div>
@@ -123,18 +187,8 @@
                         <div class="order-1 order-sm-0 col-12 col-sm-4 pt-3 pt-sm-0 p-sm-0 h-100">
                             <div class="p-3 h-100 division-container" style="overflow-y: hidden; border-radius: 10px; background-color: var(--sys-gray6);">
                                 <h5>Einnahmen</h5>
-                                <div class="h-100 opacityFadeIn" style="overflow-x: hidden; min-width: 140px !important; max-width: 350px">
-                                    <div id="incomes" class="px-3 row row-cols-2" style="height: 70% !important;">
-
-                                        <div class="division-text col-10 col-md-9 col-xxl-10 order-2 d-flex align-items-end">
-                                            <div class="w-100">
-                                                <p class="m-0">Andere</p>
-                                            </div>
-                                        </div>
-                                        <div id="others" class="division-bar division-bar-last col-2 col-md-3 col-xxl-2 order-1 d-flex align-items-end align-content-end justify-content-center">
-                                            <p class="text-center m-0" id="othersText">lädt...</p>
-                                        </div>
-                                    </div>
+                                <div class="h-100 opacity-fadeIn" style="overflow-x: hidden; min-width: 140px !important; max-width: 350px">
+                                    <div id="incomes" class="px-3 row row-cols-2" style="height: 70% !important;"></div>
                                 </div>
                             </div>
                         </div>
@@ -169,6 +223,24 @@
 </div>
 
 <script id="moduleScript">
+    /**
+     * JQuery reacting to keyboard to skip through login
+     */
+    $(".skipThrough").on('keydown', 'input', function (event) {
+        if (event.which === 13) {
+            event.preventDefault();
+            let $this = $(event.target);
+            let index = parseFloat($this.attr('data-index'));
+            $('[data-index="' + (index + 1) + '"]').focus().click();
+        }
+    });
+
+    var tags = {};
+
+    var valueNowDate = new Date()
+    valueNowDate.setMinutes(valueNowDate.getMinutes() - valueNowDate.getTimezoneOffset())
+    $("#transactionCreateHappened").val(valueNowDate.toISOString().slice(0, 16));
+
     var tagColors = ["blue", "indigo", "purple", "pink", "red", "cyan", "green", "brown"];
 
     getAccount()
@@ -204,24 +276,124 @@
     }
 
     function setGoal() {
-        //TODO: goal set
+        let val = parseFloat($("#goalValue").val().replaceAll(",", "."));
+        return new Promise(function (resolve, reject) {
+            api(`/student/finance/goal?goal=${val}`, "POST", null)
+                .then(value => {
+                    // hide goal set ui
+                    $("#goalSet").addClass("display-none");
+                    $("#goalValue").val("")
+
+                    // reload UI with new data
+                    loadUI(value);
+                    resolve(value);
+                })
+                .catch(error => {
+                    console.error(error);
+                    animateLoadByType("contentView", "100%", "dots");
+                    animateError("contentView");
+                    reject(error);
+                })
+        });
     }
 
     function createTransaction() {
-        //TODO: create Transaction
+        if (!validForm()) return;
+        return new Promise(function (resolve, reject) {
+            api("/student/finance/create", "POST", JSON.stringify({
+                "money": parseFloat($("#transactionCreateValue").val().replaceAll(",", ".")),
+                "title": $("#transactionCreateTitle").val(),
+                "description": $("#transactionCreateDescription").val(),
+                "tag": $("#transactionCreateTag").val(),
+                "happened": new Date($("#transactionCreateHappened").val()).toISOString()
+            }))
+                .then(value => {
+                    // reset and close
+                    $("#transactionCreateValue").val("")
+                    $("#transactionCreateTitle").val("")
+                    $("#transactionCreateDescription").val("")
+                    $("#transactionCreateTag").val("").attr("style", `background-color: var(--sys-gray3);`)
+                    $("#transactionCreate").addClass("display-none")
+
+                    // refresh UI with new data
+                    loadUI(value)
+                    resolve(value);
+                })
+                .catch(error => {
+                    console.error(error);
+                    animateLoadByType("contentView", "100%", "dots");
+                    animateError("contentView")
+                    reject(error)
+                })
+        });
+    }
+
+    function validForm() {
+        let value = $("#transactionCreateValue").val().replaceAll(",", "."),
+            title = $("#transactionCreateTitle").val(),
+            description = $("#transactionCreateDescription").val(),
+            tag = $("#transactionCreateTag").val(),
+            happened = $("#transactionCreateHappened").val(),
+            icon = $("#iconValidate"),
+            valid = true;
+
+        if (parseFloat(value)<1 || value==="") valid = false;
+        if (title.length<2) valid = false;
+        if (description.length<2) valid = false;
+        if (tag.length<2) valid = false;
+        if (new Date(happened).getTime()<5) valid = false;
+
+        valid ? icon.attr("style", "color: var(--sys-green)").attr("name", "checkmark-circle-outline"):
+            icon.attr("style", "color: var(--sys-red)").attr("name", "close-circle-outline");
+        return valid;
+    }
+
+    function toggleAddUI() {
+        let tsCreate = $("#transactionCreate");
+        $("#goalSet").addClass("display-none");
+        tsCreate.hasClass("display-none") ? tsCreate.removeClass("display-none") : tsCreate.addClass("display-none");
+    }
+
+    function toggleGoalUI() {
+        let goCreate = $("#goalSet");
+        $("#transactionCreate").addClass("display-none");
+        goCreate.hasClass("display-none") ? goCreate.removeClass("display-none") : goCreate.addClass("display-none");
+    }
+
+    function onCreateTagInput() {
+        let tag = $("#transactionCreateTag");
+
+        if (Object.keys(tags).includes(tag.val())) tag.attr("style",
+            `background-color: var(--sys-${tags[tag.val()]["color"]}); width: ${((tag.val().length + 1) * 8)  + 20 +'px'}`);
+        else tag.attr("style", `background-color: var(--sys-gray3); width: ${((tag.val().length + 1) * 8) + 20 +'px'}`);
     }
 
     function loadUI(value) {
 
+        value["permission"]["finance.set.goal"] ? $("#goalButton") : $("#goalButton").addClass("display-none");
+        value["permission"]["finance.set.goal"] ? $("#transactionButton") : $("#transactionButton").addClass("display-none");
+
         getStudents().then(student => {
+            // reset
+            $("#transactions").html("")
+            $("#incomes").html(`<div class="division-text col-10 col-md-9 col-xxl-10 order-2 d-flex align-items-end">
+                                            <div class="w-100">
+                                                <p class="m-0">Andere</p>
+                                            </div>
+                                        </div>
+                                        <div id="others" class="division-bar division-bar-last col-2 col-md-3 col-xxl-2 order-1 d-flex align-items-end align-content-end justify-content-center">
+                                            <p class="text-center m-0" id="othersText">lädt...</p>
+                                        </div>`)
+
+            // var for this execute
             let goal = value["data"]["goal"],
                 totalMoney = 0.0,
+                trend = 0.0,
                 weeks = [],
-                tags = {},
-                tagColor = 0,
                 transactions = value["data"]["transactions"];
 
             // Build transactions
+            let lastHappened = 0;
             for (let i=0; i < transactions.length; i++) {
                 let transaction = transactions[i],
                     money = transaction["money"],
@@ -252,8 +424,7 @@
                     if (tag==="Andere") {
                         tags[tag] = {"money": money, "color": "orange"}
                     } else {
-                        tags[tag] = {"money": money, "color": tagColors[tagColor]}
-                        tagColor++
+                        tags[tag] = {"money": money, "color": tagColors[i]}
                     }
                 } else {
                     tags[tag]["money"] += money;
@@ -261,6 +432,13 @@
 
                 // calculate money
                 totalMoney += transaction["money"];
+
+                // trend
+                if (happened.getTime() > 0) {
+                    trend = money / totalMoney;
+
+                    lastHappened = happened.getTime();
+                }
 
                 // generate transaction note
                 $("#transactions").append(`
@@ -292,6 +470,7 @@
 
             // goal display
             if (totalMoney < goal) {
+                $("#goalContainer").attr("style", "border-radius: 10px; background-color: var(--sys-gray6);")
                 $("#goalIcon").attr("style", "color:var(--sys-orange)")
                 $("#goal").html(`
                     <span style="color: var(--sys-orange)">
@@ -303,6 +482,14 @@
                 $("#goalContainer").attr("style", "border-radius: 10px; background-color: var(--sys-green); color: #fff !important")
                 $("#goalIcon").attr("style", "color:currentColor")
                 $("#goal").html(`<span style="color: #fff; font-weight: bold">${currency.format(goal)} erreicht!</span>`)
+            }
+
+            // trend
+            if (trend!==0) {
+                let trendColor = trend > 0 ? "--sys-green" : "--sys-red",
+                    trendIcon = trend > 0 ? "trending-up-outline" : "trending-down-outline";
+                $("#trendIcon").attr("style", `color: var(${trendColor})`).attr("name", trendIcon)
+                $("#trend").html(`<span style="color: var(${trendColor});">${percentage.format(trend)}</span> durch letzte Transaktion`)
             }
 
 
