--- a/student/home/modules/quotation.html
+++ b/student/home/modules/quotation.html
@@ -28,18 +28,6 @@
         transition: 300ms all ease-in-out;
     }
 
-    .quotationCreateInput {
-        background-color: var(--sys-gray6);
-        background-size: 15px;
-        color: var(--sys-black);
-        font-weight: 500;
-        font-style: var(--sys-gray6);
-        width: 100%;
-        border-radius: 6px;
-        outline: none;
-        border: 1px solid var(--sys-gray6);
-    }
-
     .quotationShadow {
         box-shadow: 0px 10px 20px -3px rgba(75, 190, 246, 0.3) !important;
     }
@@ -94,12 +82,12 @@
     </div>
     <div class="px-3 px-md-5" style="height: 90%; overflow-y: auto;">
 
-        <div id="quotationCreate" class="pt-4 pb-5 quotation display-none">
+        <div id="quotationCreate" class="pt-4 pb-5 quotation top-left-flyIn display-none">
             <div class="quotationBlock quotationShadow">
                 <div class="row row-cols-2 px-4 pt-3 pb-2">
                     <div class="col-11">
                         <div>
-                            <input id="quotationCreateText" class="quotationCreateInput" style="font-size: 1.25rem;"
+                            <input id="quotationCreateText" class="createInput" style="font-size: 1.25rem;"
                                    placeholder="Neues Zitat" type="text" data-index="1" oninput="validForm()">
                             <p id="textValidate" class="m-0 display-none" style="color: var(--sys-red); font-size: 10pt">+5 Zeichen</p>
                         </div>
@@ -113,7 +101,7 @@
                     </div>
                     <div class="col-8 py-2 d-flex">
                         <div>
-                            <input id="quotationCreateFrom" class="quotationCreateInput" style="font-size: 1rem;"
+                            <input id="quotationCreateFrom" class="createInput" style="font-size: 1rem;"
                                    placeholder="~Von" type="text" data-index="2" oninput="validForm(); this.value = this.value.replaceAll('~', '')">
                             <p id="fromValidate" class="m-0 display-none" style="color: var(--sys-red); font-size: 10pt">+5 Zeichen</p>
                             <p class="m-0 text-secondary" style="font-size: 10pt">Heute</p>
@@ -129,8 +117,8 @@
             </div>
         </div>
 
-        <div id="quotationList" class="pb-4 opacityFadeIn"></div>
-        <div id="quotationBlock" class="pb-4 opacityFadeIn display-none">
+        <div id="quotationList" class="pb-4"></div>
+        <div id="quotationBlock" class="pb-4 display-none">
             <div id="quotationBlockRow" class="row">
             </div>
         </div>
