--- a/student/register/index.html
+++ b/student/register/index.html
@@ -72,14 +72,14 @@
 
                     <div>
                         <p id="firstname-error" class="input-valid">Bitte gebe deinen Vornamen an</p>
-                        <div class="input-group" data-index="1">
+                        <div class="input-group skipThrough" data-index="1">
                             <input id="firstname" oninput="buildMail()" style="border-radius: 15px 15px 0 0;"
                                    type="text" class="form-control input-item" placeholder="Vorname"
                                    autocomplete="given-name" aria-label="firstname" aria-describedby="basic-addon1"
                                    onkeydown="" data-index="1">
                         </div>
                         <p id="lastname-error" class="input-valid">Bitte gebe deinen Nachnamen an</p>
-                        <div class="input-group" data-index="2">
+                        <div class="input-group skipThrough" data-index="2">
                             <input id="lastname" oninput="buildMail()" style="border-radius: 0 0 15px 15px;"
                                    type="text" class="form-control input-item" placeholder="Name"
                                    autocomplete="family-name" aria-label="lastname" aria-describedby="basic-addon1"
@@ -88,7 +88,7 @@
 
                         <div class="mt-3">
                             <p id="mail-error" class="input-valid">Bitte gebe ein E-Mail für dich an</p>
-                            <div class="input-group">
+                            <div class="input-group skipThrough">
                                 <input id="mail" type="email" class="input-item form-control" disabled
                                        style="cursor: not-allowed" placeholder="E-Mail" aria-label="email"
                                        aria-describedby="basic-addon1">
@@ -97,7 +97,7 @@
 
                         <div class="mt-3">
                             <p id="password-error" class="input-valid">Bitte gebe ein Passwort für dich ein</p>
-                            <div class="input-group">
+                            <div class="input-group skipThrough">
                                 <input id="password" type="password" class="input-item form-control"
                                        placeholder="Passwort" aria-label="password" aria-describedby="basic-addon1"
                                        data-index="3">
